# auv-sim-gazebo

./: .gitattributes  CMakeLists.txt  README.md  install_dependencies.sh  package.xml  set_path.sh  sim.drawio
assets/: qualifying.sdf
assets/clarke/: clarke.sdf
assets/clarke/meshes/: clarke.dae  coloured_clarke.dae
assets/common/ceiling/: ceiling.blend  ceiling.dae  ceiling.sdf
assets/common/dvl/: dvl.sdf
assets/common/lane_marker/: lane_marker_45left.dae  lane_marker_45left.sdf  lane_marker_45right.dae  lane_marker_45right.sdf  lane_marker_straight.dae  lane_marker_straight.sdf
assets/common/simple_pool/: simple_pool.dae
assets/common/transdec/: transdec.dae
assets/quali/quali_gate/: quali_gate.sdf
assets/robots/mbari_tethys/: clarke.sdf  clarke_description.md
assets/tasks/buoy/: buoy1.dae  buoy1.sdf  buoy2.dae  buoy2.sdf
assets/tasks/gate/: gate.dae
assets/tasks/octagon/: octagon.dae  octagon.sdf  octagon_table.dae  octagon_table.sdf
launch/: buoy_task.launch  gate_task.launch  gate_task_no_physics.launch  master_task.launch  movingForward.launch  no_objects.launch  octagon_task.launch  point_cloud.launch  qualifying.launch  qualifying_task.launch  sim.launch  test.launch  test_tethys.launch
launch/test/: qualifying-test.launch  qualifying.launch
src/: bridge.py  calculate_fossen.py  point_cloud  point_cloud.py  quali.py  qualifying.cpp  transform_broadcaster_sim.py
worlds/: buoy_task.sdf  gate_task.sdf  master_tasks.sdf  no_objects.sdf  no_physics.sdf  octagon_task.sdf  qualifying.sdf  qualifying_description.md
