<?xml version="1.0"?>
<package format="2">
  <name>auv-sim</name>
  <version>0.1.0</version>
  <description>
      Package to run gazebo simulation of AUV
  </description>

  <maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/mcgill-robotics/AUV-2020</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_ign_bridge</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ros_ign_gazebo</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>  
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf</exec_depend>  

</package>
